<resources>
    <string name="app_name">Fleet Driver</string>
    <string name="driver_title">Водитель</string>
    <string name="driver_subtitle">Быстрый доступ к состоянию ТС, зарядке и сервису</string>
    <string name="next_button">Далее</string>
    <string name="driver_phone_hint">Номер телефона</string>
    <string name="driver_get_password">Получить пароль</string>
    <string name="next_placeholder_message">Экран-заглушка спринта 1</string>
    <string name="footer_hint">Sova Fleet • Sprint 1</string>
    <string name="bottom_nav_vehicles">Автомобили</string>
    <string name="bottom_nav_home">Домой</string>
    <string name="bottom_nav_driver_charging">Зарядки</string>
    <string name="bottom_nav_driver_help">Помощь</string>
    <string name="driver_section_placeholder">Раздел в разработке. Навигация уже подключена.</string>
    <string name="driver_home_title">Мой рейс</string>
    <string name="driver_auto_title">Авто - Sova 25 1.245.12</string>
    <string name="driver_top_vehicle_name">Sova 25 1.245.12</string>
    <string name="driver_top_plate">X 349 MT 116</string>
    <string name="driver_range_km">117 км</string>
    <string name="driver_battery_percent">75%%</string>
    <string name="driver_vehicle_title">Sova 25 • X349MT116</string>
    <string name="driver_vehicle_subtitle">Статус: В пути • Уровень заряда: 68%%</string>
    <string name="driver_eta_title">Точка доставки</string>
    <string name="driver_eta_subtitle">Москва, Варшавское ш., 21 • ETA 14 мин</string>
    <string name="driver_order_title">Текущий заказ #SO-1842</string>
    <string name="driver_order_chip_status">Выполняется</string>
    <string name="driver_order_subtitle">12 из 18 остановок • Прогресс маршрута</string>
    <string name="driver_charging_title">Ближайшая зарядка</string>
    <string name="driver_charging_subtitle">МСК-Юг #12 • 120 кВт • 2 свободно</string>
    <string name="driver_help_title">Поддержка 24/7</string>
    <string name="driver_help_subtitle">Чат с диспетчером и быстрые инструкции</string>
    <string name="driver_action_start_charge">Начать зарядку</string>
    <string name="driver_action_open_chat">Открыть чат</string>
    <string name="driver_doors_title">Двери</string>
    <string name="driver_doors_state">Закрыты</string>
    <string name="driver_warmup_title">Прогрев</string>
    <string name="driver_warmup_state">Выкл</string>
    <string name="driver_signal_title">Сигнал</string>
    <string name="driver_signal_state">Выкл</string>
    <string name="driver_maintenance_title">Обслуживание через 3 дня</string>
    <string name="driver_maintenance_subtitle">Вам будет предоставлен другой автомобиль</string>
    <string name="driver_logbook_title">Бортовой журнал</string>
    <string name="driver_vehicle_info_tile_title">Информация про ТС</string>
    <string name="driver_map_title">Карта</string>
    <string name="driver_find_vehicle">Найти ТС</string>
    <string name="driver_journal_title">Бортовой журнал</string>
    <string name="driver_journal_add">Новая запись</string>
    <string name="driver_journal_item_1">Повреждение правого бампера</string>
    <string name="driver_journal_item_2">Низкое давление в шине</string>
    <string name="driver_journal_item_meta_1">Сегодня, 11:42 • Фото 1</string>
    <string name="driver_journal_item_meta_2">Вчера, 19:20 • Без фото</string>
    <string name="driver_new_record_title">Новая запись</string>
    <string name="driver_damage_type_label">Тип повреждения</string>
    <string name="driver_damage_type_value">Повреждение кузова</string>
    <string name="driver_damage_summary_label">Суть повреждения</string>
    <string name="driver_damage_summary_value">Повреждение правого бампера</string>
    <string name="driver_add_photo">Добавить фото</string>
    <string name="driver_service_request">Заявка на обслуживание</string>
    <string name="driver_add_record">Добавить</string>
    <string name="driver_vehicle_details_title">Информация об автомобиле</string>
    <string name="driver_vehicle_model">Sova 25</string>
    <string name="driver_vehicle_plate_label">Госномер</string>
    <string name="driver_vehicle_plate_value">X349MT116</string>
    <string name="driver_vehicle_vin_label">VIN</string>
    <string name="driver_vehicle_vin_value">RUMKEEW7A00009740</string>
    <string name="back">Назад</string>
    <string name="documents_title">Документы</string>
    <string name="menu_specs">Технические характеристики</string>
    <string name="menu_manual">Руководство пользователя</string>
    <string name="menu_service_contract">Сервисный контракт</string>
    <string name="chevron_right">›</string>
    <string name="driver_sts_title">СТС</string>
    <string name="driver_specs_title">Технические характеристики</string>
    <string name="driver_sts_content">СТС: 99 23 №668447\nВладелец: ООО «Сова Моторс»\nГосномер: X349MT116\nVIN: RUMKEEW7A00009740</string>
    <string name="driver_specs_content">Двигатель: Электро 150 кВт\nБатарея: 75 кВт·ч\nЗапас хода: 320 км\nМакс. скорость: 120 км/ч\nГрузоподъемность: 900 кг</string>
    <string name="cancel">Отмена</string>
    <string name="driver_dashboard_title">Дашборд водителя</string>
    <string name="driver_kpi_auto">Авто</string>
    <string name="driver_kpi_trips">Рейсов</string>
    <string name="driver_kpi_requests">Заявок</string>
    <string name="driver_kpi_rating">Рейтинг</string>
    <string name="driver_btn_profile">Профиль</string>
    <string name="driver_btn_available_cars">Доступные авто</string>
    <string name="driver_btn_routes">Маршруты</string>
    <string name="driver_btn_chargers">Зарядные станции</string>
    <string name="driver_btn_support_service">Поддержка и сервис</string>
    <string name="driver_notifications_title">Уведомления</string>
    <string name="driver_edit_profile_title">Редактировать профиль</string>
    <string name="driver_charging_map_title">Зарядки на карте</string>
    <string name="driver_charging_filter_title">Фильтр зарядных устройств</string>
    <string name="driver_open_filter">Фильтр</string>
    <string name="driver_apply_filter">Применить</string>
    <string name="driver_reset_filter">Сбросить</string>
    <string name="driver_profile_saved">Профиль сохранен</string>
    <string name="edit_in_progress">Редактирование будет добавлено в следующем шаге</string>
    <string name="driver_profile_edit">Редактировать</string>
    <string name="driver_profile_name_label">ФИО</string>
    <string name="driver_profile_name_value">Алексей Смирнов</string>
    <string name="driver_profile_phone_label">Телефон</string>
    <string name="driver_profile_phone_value">+7 (916) 111-22-33</string>
    <string name="driver_profile_employee_id_label">Табельный номер</string>
    <string name="driver_profile_employee_id_value">D-204</string>
    <string name="driver_profile_license_label">Водительское удостоверение</string>
    <string name="driver_profile_license_value">77 23 458712 • Категория C</string>
    <string name="driver_profile_experience_label">Стаж</string>
    <string name="driver_profile_experience_value">8 лет</string>
    <string name="driver_profile_email_label">E-mail</string>
    <string name="driver_profile_email_value">a.smirnov@sova.dev</string>
    <string name="driver_available_cars_title">Доступные авто</string>
    <string name="driver_available_cars_search_hint">Поиск по модели, номеру, VIN</string>
    <string name="driver_available_car_meta_1">Заряд 68%% • Пробег 124 520 км • Свободен</string>
    <string name="driver_available_car_meta_2">Заряд 83%% • Пробег 98 210 км • Доступен с 16:00</string>
    <string name="driver_available_car_meta_3">Заряд 55%% • Пробег 76 950 км • На базе</string>
    <string name="driver_vehicle_status">Статус: В пути</string>
    <string name="driver_vehicle_mileage_label">Пробег</string>
    <string name="driver_vehicle_mileage_value">124 520 км</string>
    <string name="driver_vehicle_charge_label">Заряд</string>
    <string name="driver_vehicle_charge_value">68%% (запас хода 117 км)</string>
    <string name="driver_cta_open_journal">Открыть журнал</string>
    <string name="driver_cta_support">Поддержка</string>
    <string name="driver_support_opened">Переход в поддержку будет добавлен следующим шагом</string>
    <string name="driver_journal_search_hint">Поиск по журналу</string>
    <string name="driver_journal_item_type_1">Тип: Повреждение • Статус: Новая</string>
    <string name="driver_journal_item_type_2">Тип: Шины • Статус: В работе</string>
    <string name="driver_journal_open_details">Детали</string>
    <string name="driver_journal_status_open">Новая</string>
    <string name="driver_journal_status_in_progress">В работе</string>
    <string name="driver_journal_detail_type">Тип: %1$s</string>
    <string name="driver_journal_detail_status">Статус: %1$s</string>
    <string name="driver_journal_detail_template">Тип: %1$s\nСтатус: %2$s\n\nОписание:\n%3$s</string>
    <string name="driver_journal_detail_description_1">После разгрузки заметил царапину и вмятину на правом бампере. Требуется осмотр и оценка.</string>
    <string name="driver_journal_detail_description_2">Давление в переднем левом колесе падает после длительной поездки. Нужна диагностика шиномонтажа.</string>
    <string name="driver_journal_description_label">Описание</string>
    <string name="driver_damage_type_hint">Например: Повреждение кузова</string>
    <string name="driver_damage_summary_hint">Кратко опишите проблему</string>
    <string name="driver_photo_attach_stub">Добавление фото подключим следующим шагом</string>
    <string name="driver_record_added">Запись добавлена в журнал</string>
</resources>
